# cloudflare-ddns-cron

./: Cargo.toml  Dockerfile  README.md  justfile  kube-deployment.yaml
src/: domain.rs  ip.rs  main.rs
