[package]
name = "cloudflare-ddns-cron"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

[lints.clippy]
pedantic = { level = "warn" }
